--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   font-size: 16px;
-  font-family: 'Comic Sans MS', sans-serif;
+  font-family: 'Comic Sans MS', 'Chalkboard', sans-serif;
   color: gainsboro;
 }
 
@@ -35,7 +35,16 @@ section {
   margin-top: 10px;
   padding: 1px;
   padding-left: 12px;
+  padding-right: 12px;
   border-radius: 20px;
+}
+
+.post {
+  font-weight: 2200;
+}
+
+.date {
+  text-align: right;
 }
 
 img {
